force-app/main/default/objects/Lilly_Outcome__c/Lilly_Outcome__c.object-meta.xml
<CustomObject>
    <label>Outcome</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Outcome Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>