force-app/main/default/objects/Lilly_Outcome__c/fields/LilIy_Call_Account__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Call_Account__c</fullName>
    <formula>Lilly_Call__r.OCE__AccountName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Account</label>
    <type>Text</type>
</CustomField>