force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>