force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>OCE__AccountPlan__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>