force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Approval_Comment__c</fullName>
    <label>Approval Comment</label>
    <type>TextArea</type>
</CustomField>