force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Outcomes2</relationshipName>
    <type>Lookup</type>
</CustomField>