force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Call__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call</label>
    <referenceTo>OCE__Call__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>