force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Objective__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>OCE__AccountObjective__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>