force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Outcome_Note__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Outcome_Note__c</fullName>
    <label>Outcome Note</label>
    <type>TextArea</type>
</CustomField>