force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Outcome_Significance__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Outcome_Significance__c</fullName>
    <label>Outcome Significance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Mini</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>