force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Outcome_Status__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Outcome_Status__c</fullName>
    <label>Outcome Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>