force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Outcome_Type__c</fullName>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KOL - Speaking Engagement</fullName>
            </value>
            <value>
                <fullName>KOL - Trial Participation</fullName>
            </value>
            <value>
                <fullName>KOL – Publication</fullName>
            </value>
            <value>
                <fullName>KOL – Advisory Board</fullName>
            </value>
            <value>
                <fullName>HCA – On Guidelines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>