force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tactic</label>
    <referenceTo>OCE__AccountTactic__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>