force-app/main/default/objects/Lilly_Outcome__c/fields/Lilly_Territory_Plan__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Territory_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Plan</label>
    <referenceTo>OCE__TerritoryPlan__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>