force-app/main/default/objects/Lilly_Outcome__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Lilly_Account__c</columns>
    <columns>Lilly_Outcome_Status__c</columns>
    <columns>Lilly_Outcome_Type__c</columns>
    <columns>Lilly_Outcome_Significance__c</columns>
    <columns>Lilly_Outcome_Note__c</columns>
    <columns>Lilly_Territory_Plan__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>