force-app/main/default/objects/Lilly_Outcome__c/listViews/Outcomes_with_Accounts.listView-meta.xml
<ListView>
    <fullName>Outcomes_with_Accounts</fullName>
    <columns>Lilly_Account__c</columns>
    <columns>Lilly_Outcome_Status__c</columns>
    <columns>Lilly_Outcome_Type__c</columns>
    <columns>Lilly_Outcome_Significance__c</columns>
    <columns>Lilly_Outcome_Note__c</columns>
    <columns>Lilly_Territory_Plan__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lilly_Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Outcomes with Accounts</label>
</ListView>